--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -13,7 +13,10 @@
 </style>
 
 <div layout:fragment="content">
-	<img th:src="@{/images/logo-spring.png}" id="center-image" alt="스프링로고" class="d-block mx-auto mt-5"/>
+	<img th:src="@{/images/logo-spring.png}" id="center-image1" alt="스프링로고" class="d-block mx-auto mt-5"/>
+	hello spring
+	<img th:src="@{/images/logo-spring.png}" id="center-image2" alt="스프링로고" class="d-block mx-auto mt-5"/>
+	hello spring
 </div>
 
 <script layout:fragment="script">
