--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -35,10 +35,18 @@
 			<td>
 				<img th:src="${boxOffice.posterUrl}" alt="movie_image"/>
 			</td>
-			<td>
-				<video autoplay muted controls loop>
+			<td th:if="${!#strings.startsWith(boxOffice.vodUrl, 'https://www.youtube.com')}">
+				<video autoplay muted controls loop width="1100" height="650">
 					<source th:src="${boxOffice.vodUrl}" type="video/mp4">
 				</video>
+			</td>
+			<td th:if="${#strings.startsWith(boxOffice.vodUrl, 'https://www.youtube.com')}">
+				<iframe th:src="|${boxOffice.vodUrl}?autoplay=1&mute=1&controls=0&loop=1&playlist=${#strings.substring(boxOffice.vodUrl, #strings.indexOf(boxOffice.vodUrl, '/embed/') + 7)}|" width="1100" height="650"title="YouTube video player"
+						frameborder="0"
+						allow="accelerometer; autoplay; clipboard-write;
+						encrypted-media; gyroscope; picture-in-picture; web-share"
+						allowfullscreen>
+				</iframe>
 			</td>
 		</tr>
 		</tbody>
